--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.0",
+    "react-router-dom": "^6.21.2",
+    "react-router-hash-link": "^2.4.3",
+    "react-scroll": "^1.9.0",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1"
   },
